--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Laborotoriya - 1</title>
     <script src="index.js" defer></script>
   </head>
   <body>
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      .headText {
+        width: 100%;
+        height: max-content;
+        padding: 20px 0;
+        display: grid;
+        place-items: center;
+        background-color: #f2f2f2;
+        border: 1px solid black;
+        overflow: inherit;
+        transition: 0.8s;
+      }
+      .headText:hover {
+        background-color: black;
+        color: white;
+      }
+      .headText:hover h1 {
+        transform: scale(1.07);
+        transition: 0.8s;
+      }
+      h2 {
+        text-align: center;
+      }
       table {
         border-collapse: collapse;
         width: 100%;
@@ -26,17 +53,19 @@
         color: white;
       }
 
-      h2 {
-        text-align: center;
-      }
       tr,
       td,
+      th,
       tbody,
       thead,
       table {
         border: 1px solid black;
       }
     </style>
+    <div class="headText">
+      <h1>Ələddin Əlizadə</h1>
+      <p>640a2</p>
+    </div>
     <h2>2022 Tədris ili payiz Semestr</h2>
     <table>
       <thead>
@@ -83,7 +112,6 @@
         </tr>
       </tbody>
     </table>
-
     <hr />
     <b>Average (2 Semestr):</b>
     <span class="average"> </span>
